--- a/intro.tex
+++ b/intro.tex
@@ -1,6 +1,6 @@
 \cleardoublepage
 \chapter{Einleitung}
-\label{cha:einleitung}
+\label{intro}
 
 \todo[inline]{Moore's Law? naja}
 \todo[inline]{MOSFET-Dielektrika}
