--- a/literature.bib
+++ b/literature.bib
@@ -1,4 +1,49 @@
 
+@article{mazaleyrat_methodology_2005,
+	title = {A methodology for the kinetic Monte Carlo simulation of alumina atomic layer deposition onto silicon},
+	volume = {33},
+	issn = {0927-0256},
+	url = {http://www.sciencedirect.com/science/article/pii/S0927025604003416},
+	doi = {16/j.commatsci.2004.12.069},
+	abstract = {A new kinetic Monte Carlo ({KMC}) method is presented to investigate the atomic layer deposition ({ALD}) of alumina onto silicon. Atoms are located on predefined sites and thus do not move continuously. This lattice-based {KMC} approach requires preliminary physical considerations on the crystal structures that we aim to reproduce, especially in the case of heterogeneous systems like high-[kappa] oxides deposition on silicon. Atomistic configuration changes are performed by local events: these are elementary reactional mechanisms occurring on specific sites. The temporal dynamics is governed by transition probabilities, calculated for every event from activation barriers, {ALD} process parameters and random numbers. Mechanism activation energies may come from ab initio calculations, literature or experiments. We show that this kind of algorithm is computation-time-cheap enough to allow huge systems simulations: up to millions of atoms and events during a few hours on an ordinary computer.},
+	number = {1-3},
+	urldate = {2011-08-11},
+	journal = {Computational Materials Science},
+	author = {Mazaleyrat, G. and Estève, A. and Jeloaica, L. and Djafari-Rouhani, M.},
+	year = {2005},
+	keywords = {Atomic layer deposition, Atomic scale simulation, High-[kappa] gate dielectrics, Kinetic Monte Carlo},
+	pages = {74--82},
+	file = {ScienceDirect Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/5GFI35CU/Mazaleyrat et al. - 2005 - A methodology for the kinetic Monte Carlo simulati.pdf:application/pdf;ScienceDirect Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/IZM9RM6Z/Mazaleyrat et al. - 2005 - A methodology for the kinetic Monte Carlo simulati:}
+}
+
+@inproceedings{dwivedi_multiscale_2009,
+	address = {Vienna, Austria},
+	title = {Multiscale Simulation and Optimization of an Atomic Layer Deposition Process in a Nanoporous Material},
+	url = {http://link.aip.org/link/ECSTF8/v25/i8/p115/s1&Agg=doi},
+	doi = {10.1149/1.3207582},
+	urldate = {2011-08-11},
+	booktitle = {{ECS} Transactions},
+	author = {Dwivedi, Vivek and Adomaitis, Raymond A.},
+	year = {2009},
+	pages = {115--122},
+	file = {Dwivedi and Adomaitis - 2009 - Multiscale Simulation and Optimization of an Atomi.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/F6NI44SI/Dwivedi and Adomaitis - 2009 - Multiscale Simulation and Optimization of an Atomi.pdf:application/pdf}
+}
+
+@inproceedings{dwivedi_multiscale_2009-1,
+	title = {Multiscale modeling of atomic layer deposition processes},
+	isbn = {978-1-4244-4523-3},
+	doi = {10.1109/ACC.2009.5160582},
+	abstract = {A multiscale simulator for alumina film growth inside a nanoporous material during an atomic layer deposition process is developed. The model combines a continuum description at the macroscopic level of precursor gas transport inside a nanopore during exposure to each of the two precursor species (trimethyaluminum and water) with a Monte Carlo simulation of the film growth on the microscopic scale. Simulation results are presented for both the Monte Carlo simulation and for the multiscale system, the latter illustrating how nonuniform deposition along the nanopore can occur when insufficient precursor exposure levels are used.},
+	booktitle = {American Control Conference, 2009. {ACC} '09.},
+	publisher = {{IEEE}},
+	author = {Dwivedi, V. and Adomaitis, R. A},
+	month = jun,
+	year = {2009},
+	keywords = {Al2O3, alumina, alumina film growth, Amorphous materials, Atomic layer deposition, Chemical engineering, dielectric thin films, Educational institutions, Gases, Manufacturing, Microscopy, Monte Carlo methods, Monte Carlo simulation, multiscale modeling, nanoporous material, Nanoporous materials, nonuniform deposition, precursor gas transport, Sputtering, Thickness control},
+	pages = {2495--2500},
+	file = {IEEE Xplore Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/7A6FUUIH/Dwivedi and Adomaitis - 2009 - Multiscale modeling of atomic layer deposition pro.pdf:application/pdf}
+}
+
 @article{puurunen_surface_2005,
 	title = {Surface chemistry of atomic layer deposition: A case study for the trimethylaluminum/water process},
 	volume = {97},
@@ -23,6 +68,15 @@
 	year = {2008},
 	pages = {055029},
 	file = {Gosálvez et al. - 2008 - Atomistic methods for the simulation of evolving s.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/ITNMFRHV/Gosalvez et al. - 2008 - Atomistic methods for the simulation of evolving s.pdf:application/pdf}
+}
+
+@phdthesis{dwivedi_multiscale_2010,
+	address = {Maryland},
+	title = {A multiscale Model for an atomic layer deposition process},
+	school = {University of Maryland},
+	author = {Dwivedi, Vivek},
+	year = {2010},
+	file = {Dwivedi_diss_2010.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/EREP796V/Dwivedi_diss_2010.pdf:application/pdf}
 }
 
 @misc{plimpton_lammps_2014,
@@ -80,6 +134,42 @@
 	year = {2005},
 	pages = {493--499},
 	file = {ffield.reax.nielson:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/NCJ5PAGJ/ffield.reax.nielson:text/plain;jp046244d.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/RIUZWD5M/jp046244d.pdf:application/pdf}
+}
+
+@article{stamatakis_graph-theoretical_2011,
+	title = {A graph-theoretical kinetic Monte Carlo framework for on-lattice chemical kinetics},
+	volume = {134},
+	issn = {0021-9606, 1089-7690},
+	url = {http://scitation.aip.org/content/aip/journal/jcp/134/21/10.1063/1.3596751},
+	doi = {10.1063/1.3596751},
+	abstract = {Existing kinetic Monte Carlo({KMC}) frameworks for the simulation of adsorption, desorption,diffusion, and reaction on a lattice often assume that each participating species occupies a single site and represent elementary events involving a maximum of two sites. However, these assumptions may be inadequate, especially in the case of complex chemistries, involving multidentate species or complex coverage and neighboring patterns between several lattice sites. We have developed a novel approach that employs graph-theoretical ideas to overcome these challenges and treat easily complex chemistries. As a benchmark, the Ziff-Gulari-Barshad system is simulated and comparisons of the computational times of the graph-theoretical {KMC} and a simpler {KMC} approach are made. Further, to demonstrate the capabilities of our framework, the water-gas shift chemistry on Pt(111) is simulated.},
+	number = {21},
+	urldate = {2014-03-25},
+	journal = {The Journal of Chemical Physics},
+	author = {Stamatakis, Michail and Vlachos, Dionisios G.},
+	month = jun,
+	year = {2011},
+	keywords = {Activation energies, Adsorbates, Decomposition reactions, Desorption, Diffusion, Monte Carlo methods, Reaction kinetics modeling, Surface reactions, Transition state theory, Water gas shift reaction},
+	pages = {214115},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/TV847HZU/Stamatakis and Vlachos - 2011 - A graph-theoretical kinetic Monte Carlo framework .pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/7R2WKF6N/1.html:text/html;Stamatakis_JCP11_GraphTheorKMC_SUPPL.Revised.final.docx:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/QKSK9Z89/Stamatakis_JCP11_GraphTheorKMC_SUPPL.Revised.final.docx:application/vnd.openxmlformats-officedocument.wordprocessingml.document;Stamatakis_JCP11_GraphTheorKMC_SUPPL.Revised.final.pdf:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/SRJBXGQB/Stamatakis_JCP11_GraphTheorKMC_SUPPL.Revised.final.pdf:application/pdf}
+}
+
+@article{stamatakis_unraveling_2012,
+	title = {Unraveling the Complexity of Catalytic Reactions via Kinetic Monte Carlo Simulation: Current Status and Frontiers},
+	volume = {2},
+	issn = {2155-5435},
+	shorttitle = {Unraveling the Complexity of Catalytic Reactions via Kinetic Monte Carlo Simulation},
+	url = {http://dx.doi.org/10.1021/cs3005709},
+	doi = {10.1021/cs3005709},
+	abstract = {Over the past two decades, the necessity for predictive models of chemical kinetics on catalytic surfaces has motivated the development of ab initio kinetic Monte Carlo ({KMC}) simulation frameworks. These frameworks have been successfully used to investigate chemistries of academic interest and industrial importance, such as {CO} oxidation, {NO} oxidation and reduction, ethylene hydrogenation, {CO} hydrogenation to ethanol, and water-gas shift. These studies have shed light on the effect of catalyst composition, surface structure, lateral interactions, and operating conditions on the apparent turnover frequency of the chemistries of interest. Yet, extending the existing {KMC} approaches to study large chemistries on complex catalytic structures poses several challenges. In this review, we discuss the recent milestones in the area of {KMC} simulation of chemical kinetics on catalytic surfaces and review a number of studies that have furthered our fundamental understanding of specific chemistries. In addition, we provide directions for future research aiming toward incorporating detailed physics and chemistry, as well as assessing and improving the accuracy of {KMC} methods, toward developing quantitative models of surface kinetics.},
+	number = {12},
+	urldate = {2014-04-01},
+	journal = {{ACS} Catalysis},
+	author = {Stamatakis, Michail and Vlachos, Dionisios G.},
+	month = dec,
+	year = {2012},
+	pages = {2648--2663},
+	file = {ACS Full Text PDF w/ Links:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/C4ZVVS5M/Stamatakis and Vlachos - 2012 - Unraveling the Complexity of Catalytic Reactions v.pdf:application/pdf;ACS Full Text Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/2V6TM4H8/cs3005709.html:text/html}
 }
 
 @article{cignoni_dewall:_1998,
