--- a/masterthesis.tex
+++ b/masterthesis.tex
@@ -29,7 +29,7 @@
 \include{abstract}
 \include{contents}
 
-\include{einleitung}
+\include{intro}
 \include{theory}
 \include{models}
 \include{results}
