--- a/copperpvd.tex
+++ b/copperpvd.tex
@@ -80,7 +80,7 @@ Wie Tabelle~\ref{tab:copperpots} zu entnehmen ist, wurden die verfügbaren Param
   \end{subfigure}
   \caption[Abweichung der Schmelztemperaturen bei Kupfer-MD]{
     Abweichung der Schmelztemperatur mit verschiedenen Parametrisierungen.
-    Experimentelle Werte von Brillo et al.\cite{brillo_density_2006}.
+    Experimentelle Werte von \textsc{Brillo et al.}\cite{brillo_density_2006}.
   }
   \label{fig:copperthermo}
 \end{figure}
