--- a/kmc.tex
+++ b/kmc.tex
@@ -44,7 +44,7 @@ Abbildung~\ref{fig:kmctree} zeigt zur Veranschaulichung ein \todo{Wort}generisch
   \label{fig:kmctree}
 \end{figure}
 
-Eine mögliche Anwendung von KMC-Simulationen besteht in der Beschreibung der Kinetik chemischer Reaktionen, beispielsweise beim Ätzen von Kristallen\todo{first paper ever}{} oder bei katalytischen Reaktionen\todo{Zagros}.
+Eine mögliche Anwendung von KMC-Simulationen besteht in der Beschreibung der Kinetik chemischer Reaktionen, beispielsweise beim Ätzen von Kristallen\cite{gosalvez_atomistic_2008} oder bei katalytischen Reaktionen\cite{stamatakis_unraveling_2012}.
 Die Ereignisse entsprechen dann einzelnen chemischen oder physikalischen Vorgängen wie dem \todo{Wort}Ablösen eines Atomes von der Kristalloberfläche, der Adsorption eines Moleküls auf der Oberfläche oder der Reaktion zwischen zwei Molekülen, wobei die Reaktionsraten direkt als Ereignisraten genutzt werden.
 
 Darin zeigt sich ein Problem der KMC-Formulierung:
