--- a/depositions.tex
+++ b/depositions.tex
@@ -50,7 +50,10 @@ Alle Prozesse finden in speziellen Abscheidungskammern oder Reaktoren statt, üb
     \label{fig:depochamber-c}
   }
 
-  \caption[Abscheidungskammern und -reaktoren]{Abscheidungskammern und -reaktoren}
+  \caption[Abscheidungskammern und -reaktoren]{
+    Abscheidungskammern und -reaktoren.
+    Weitere Details können Referenz~\cite{granneman_batch_2007} entnommen werden.
+  }
   \label{fig:reactors}
 \end{figure}
 
@@ -85,7 +88,7 @@ Alle Prozesse finden in speziellen Abscheidungskammern oder Reaktoren statt, üb
     \hline
   \end{tabularx}
   \caption[Mögliche Produkte der Abscheidungsarten]{Mögliche Produkte der Abscheidungsarten.
-    Weitergehende Informationen finden sich in der Literatur für PVD\todo[inline]{cite}, CVD\todo[inline]{cite} und ALD\cite{puurunen_surface_2005}.
+    Übersichten über mögliche Prozesse und Precursor finden sich in den Referenzen für PVD\cite{mattox_handbook_2010,helmersson_ionized_2006}, CVD\cite{pierson_handbook_1999} und ALD\cite{puurunen_surface_2005,elliott_atomic-scale_2012}.
   }
   \todo[inline]{Referenzen für abgeschiedene Systeme}
   \label{tab:deposition-materials}
@@ -94,7 +97,7 @@ Alle Prozesse finden in speziellen Abscheidungskammern oder Reaktoren statt, üb
 \subsection{Physikalische Gasphasenabscheidung}
 
 Physikalische Gasphasenabscheidungen (PVD, Physical Vapor Deposition) sind eine grundlegenden Abscheidungsart, die nichtreaktiv mit einzelnen Atomen funktioniert.
-Zu ihnen zählt beispielsweise Sputtering, bei dem aus einem Block des gewünschten Materiales (Target) per \todo{wirklich Elektronen?}Elektronen- oder Ionenstrahl kontinuierlich Atome herausgeschlagen werden, die sich dann auf dem Substrat absetzen und dort zu einer dünnen Schicht verbinden.
+Zu ihnen zählt neben und Vakuum-Evaporation vor allem Sputtering, bei dem aus einem Block des gewünschten Materiales (Target) per Elektronen- oder Ionenstrahl kontinuierlich Atome herausgeschlagen werden, die sich dann auf dem Substrat absetzen und dort zu einer dünnen Schicht verbinden.
 Anhand der Energien der herausschlagenden Partikel und deren \todo{Größe des?}Teilchenstrom lässt sich dabei die Wachstumsrate und Qualität des abgeschiedenen Dünnfilmes beeinflussen.
 Durch den statistischen Charakter der Abscheidungsorte resultiert Sputtering in Abhängigkeit des abgeschiedenen Materiales und der Umgebungsbedingungen meist in glatten Filmen\cite{svorcik_annealing_2011}, bei denen prozessbedingt keine Kontrolle der Schichtdicke im Sub-Nanometer-Bereich möglich ist.
 Gemischte Systeme wie Legierungen und mehrlagige Schichten werden durch Nutzung mehrerer Targets ermöglicht\cite{cammarata_nanoindentation_1990}.
@@ -133,7 +136,7 @@ Die Wachstumsrate aus den kontinuierlichen Prozessen wird somit von dem Growth-p
 Über die Zahl der Zyklen lässt sich somit die Dicke der gewachsenen Schicht genauer als mit kontinuierlichen Abscheidungen steuern, was sich aber in langsameren Abscheidungsprozessen äußert.
 
 Anders als der Name des Prozesses vermuten lässt, werden aufgrund sterischer Hinderung (Abbildung~\ref{fig:sterichindrance}) der Precursorliganden keine kompletten Atomlagen in jedem Zyklus aufgebracht.
-Üblicherweise erreichen ALD-Prozesse maximal zu \todo{referenz}\SI{35}{\percent} einer Monolage, doch sorgen die teils recht großen Precursormoleküle mit größerem Radius der sterischen Hinderung für geringere GPC-Werte.
+Üblicherweise erreichen ALD-Prozesse maximal \SI{35}{\percent} einer Monolage\cite{ylilammi_monolayer_1996}, doch sinkt dieser Wert mit der Größe der Precursormoleküle aufgrund der erweiterten sterischen Hinderung.
 Die Suche nach möglichen Precursorpaaren und Prozessparametern unterliegt ansonsten gleichen Anforderungen wie bei CVD.
 Eine ausführlichere Übersicht zu Atomlagenabscheidungen und zu möglichen Precursorpaaren für verschiedene Materialien findet sich in Referenz~\cite{puurunen_surface_2005}.
 
